# CodeDesigner

./: .gitignore  CMakeLists.txt  release_it.sh
src/: CMakeLists.txt
src/controls/include/wx/wxsf/: ScaledDC.h
src/controls/src/wxShapeFramework/: CMakeLists.txt
src/gui/: SettingsDialog.cpp  TabArt.cpp
src/plugins/: CMakeLists.txt
src/projectbase/: CMakeLists.txt
