set(projectbase_SOURCES 
FrameBase.h
ProjectBase.h
Common.cpp
DiagramBase.h
GeneratorBase.cpp
SettingsBase.h
ProjectBase.cpp
DiagramBase.cpp
Events.h
shapes/PolygonElement.cpp
shapes/LabelElement.cpp
shapes/LineElement.h
shapes/RoundRectElement.cpp
shapes/LineElement.cpp
shapes/MultiLabelLineElement.h
shapes/LabelElement.h
shapes/RectElement.cpp
shapes/DnDElement.cpp
shapes/RoundRectElement.h
shapes/PolygonElement.h
shapes/MultiLabelLineElement.cpp
shapes/CircleElement.h
shapes/RectElement.h
shapes/DnDElement.h
shapes/CircleElement.cpp
codegen/Optimizer.cpp
codegen/Generator.cpp
codegen/ElementProcessor.h
codegen/Preprocessor.cpp
codegen/Algorithm.h
codegen/Verifier.h
codegen/Language.h
codegen/Language.cpp
codegen/Optimizer.h
codegen/Verifier.cpp
codegen/Algorithm.cpp
codegen/ElementProcessor.cpp
codegen/CodeItemsGenerator.h
codegen/CommentProcessors.cpp
codegen/CommentProcessors.h
codegen/Generator.h
codegen/Preprocessor.h
codegen/CodeItemsGenerator.cpp
Common.h
FrameBase.cpp
SettingsBase.cpp
GeneratorBase.h
gui/ProgressDialog.cpp
gui/ElementDialog.cpp
gui/FunctionDialog.cpp
gui/ElementDialog.h
gui/VariableDialog.h
gui/FunctionLinkDialog.h
gui/UpdateCodeDialog.h
gui/AccessTypeDialog.h
gui/CodeLinkDialog.h
gui/DiagramDialog.h
gui/GUI_ProjectBase.h
gui/ScopedElementDialog.h
gui/ScopedElementDialog.cpp
gui/AccessTypeDialog.cpp
gui/GUI_ProjectBase.cpp
gui/FunctionDialog.h
gui/VariableDialog.cpp
gui/ChoiceDialog.cpp
gui/ProgressDialog.h
gui/CodeLinkDialog.cpp
gui/FunctionLinkDialog.cpp
gui/DiagramDialog.cpp
gui/UMLDesignerAUI.fbp
gui/UpdateCodeDialog.cpp
gui/ChoiceDialog.h
Events.cpp
)

add_library(projectbase SHARED ${projectbase_SOURCES})
target_include_directories(projectbase PRIVATE .)
target_link_libraries(projectbase interfaces wxsf)

